# mcgs

./: .gitmodules  README.md  prueba.txt
practicas/: practica03.cpp
practicas/practica01/: Doxyfile  Makefile  README.md  fib.cpp  fib.cpp.save
practicas/practica01/fib_cmake/: CMakeLists.txt  README.md  doc.html  fib.cpp
practicas/practica01/fib_cmake/html/: fib_8cpp.html  files.html  globals.html  globals_func.html  globals_vars.html  index.html
practicas/practica01/fib_cmake/html/search/: all_66.js  all_6c.js  all_6d.js  all_73.js  search.js  variables_61.js  variables_62.js  variables_69.js
practicas/practica01/fib_cmake/latex/: doxygen.sty  fib_8cpp.tex  files.tex  refman.tex
practicas/practica01/fib_make/: Doxyfile  Makefile  README.md  fib.cpp
practicas/practica01/html/: fib.html
practicas/practica02/: Doxyfile  Makefile  README.md  big_o_cronometrada.cpp  loop_doc.html  loop_exercises.solucion  loop_exercises.solucion.cpp
robots/: CMakeLists.txt  main.cpp
